Package: async
==============

Version: 0.8.0-9000 [2016-04-15]
o STANDARIZATION Now using option and environment names already defined
  by the future package, i.e. future.maxTries, future.interval, and
  R_FUTURE_MAXTRIES (used to be named async::* and R_ASYNC_*).
o STANDARIZATION: Directories for BatchJobs are now created under
  .future/<session>/ of the current directory (was .async/<session>/).
  Also, those subdirectories now use prefix 'BatchJobs_' (was 'async').
  This was done to have a common directory structure also for other
  future backends that needs to keep files on the file system.
o CLEANUP: Renamed AsyncTaskError to BatchJobsFutureError.
o CLEANUP: Dropping AsyncListEnv.


Version: 0.8.0 [2016-04-14]
o batchjobs() function gained class attribute.
o Renamed BatchJobsAsyncTask to BatchJobsFuture.
o CLEANUP: Removed no-longer needed asyncBatchEvalQ() because
  BatchJobsFuture is now self sufficient.
o BUG FIX: Global variables with the same name as objects in the
  base or the BatchJobs package would be overridden by the
  latter, e.g. a global variable 'col' would be masked by
  'base::col'. (Issue #55)


Version: 0.7.1 [2016-01-04]
o BUG FIX: New BatchJobs work directories would encode 08:03 as
  ' 803' instead of '0803' resulting in a BatchJobs assertion
  error on invalid pathnames.


Version: 0.7.0 [2016-01-02]
o Now value() for BatchJobsAsyncTask removes associated BatchJobs
  subdirectories upon success.  Previously, such cleanup was only
  happening when the object was garbage collected.
o Each R session that load the async package now uses a unique
  subdirectory under .async/, e.g. .async/20160102_154202-IVBRy1/.
  It is in turn under that session-specific subdirectory that the
  individual BatchJobs subdirectories corresponding to a specific
  future lives.  Note that, although, the each of latter is removed
  when calling value() for its future, the session-specific async
  directory is not removed.  In order to remove the latter, make