@@ -1,7 +1,7 @@
 Package: async
 Version: 0.8.0-9000
 Depends:
-    R (>= 3.1.2),
+    R (>= 3.2.0),
     future (>= 0.13.0)
 Imports:
     BatchJobs (>= 1.6),
