@@ -9,12 +9,8 @@ message("*** Demos ...")
 
 message("*** Mandelbrot demo of the 'future' package ...")
 
-if (getRversion() >= "3.2.0") {
-  plan(batchjobs, batchjobs="local")
-  demo("mandelbrot", package="future", ask=FALSE)
-} else {
-  message(" - This demo requires R (>= 3.2.0). Skipping test.")
-}
+plan(batchjobs, batchjobs="local")
+demo("mandelbrot", package="future", ask=FALSE)
 
 message("*** Demos ... DONE")
 
